# compare_accumulate_get

./: CMakeLists.txt  README.md  mpi_sum_compare.cpp  plot_timings.py  run_mpi_sum_compare.sl  run_mpi_sum_compare.sl.in
